src/App.css
.App {
  text-align: center;
  background-color: #222;
  height: 310vh;
}

.App-logo {
  animation: App-logo-spin infinite 20s linear;
  height: 80px;
}

.App-header {
  overflow: hidden;
  position: fixed;
  background-color: #222;
  top: 0;
  width: 100%;
  height: 15vh;
  padding: 2vh;
  color: white;
  z-index: 1;
}

.App-title {
  font-size: 2em;
  text-align: center;
}

.App-intro {
  position: fixed;
  width: 100%;
  top: 15vh;
  background: #222;
  height: 10vh;
  padding-top: 1vh;
  padding-bottom: 1vh;
  font-size: 2em;
  font-family: 'BebasNeue', Fallback, sans-serif;
  color: #ffffff;
}

.new-intro {
  /* position: fixed; */
  width: 100%;
  top: 11vh;
  /* background: #222; */
  height: 12vh;
  padding-top: 1vh;
  font-size: 2em;
  font-family: 'BebasNeue', Fallback, sans-serif;
  color: #fff;
}

.social-icons{
  width: 7vw;
  padding-left: 1.5vw;
  padding-right: 1.5vw;
  fill: #fff;
}

.social-icons:hover{
  fill: #08f;
  transition: 2s ease;
}

/* ==== Top Sign Start===== */

@import url(https://fonts.googleapis.com/css?family=Exo+2:200i);
h1 {
  /* Base font size */
  font-size: 3vh;
  text-align: center;
  margin: auto auto;
  /* Set neon color */
  --neon-text-color: #f40;
  --neon-border-color: #08f;
  font-family: 'Neon80sRegular', 'Exo 2', sans-serif;
  display: flex;
  justify-content: center;
  align-items: center;
  min-height: .4vh;
  font-weight: 200;
  font-style: italic;
  color: rgb(255, 225, 225);
  padding: 1rem 1.5rem 1rem 1.5rem;
  border: 0.4rem solid rgb(223, 250, 255);
  border-radius: 3rem;
  animation: flicker 20s infinite alternate;
  width: 30vw;
}
h1::-moz-selection {
  background-color: var(--neon-border-color);
  color: var(--neon-text-color);
}
h1::selection {
  background-color: var(--neon-border-color);
  color: var(--neon-text-color);
}
h1:focus {
  outline: none;
}
/* Animate neon flicker */
@keyframes flicker {
    0%, 19%, 21%, 23%, 25%, 54%, 56%, 100% {
        text-shadow:
            -0.2rem -0.2rem 1rem rgb(255, 134, 134),
            0.2rem 0.2rem 1rem rgb(255, 134, 134),
            0 0 2rem var(--neon-text-color),
            0 0 4rem var(--neon-text-color),
            0 0 6rem var(--neon-text-color),
            0 0 8rem var(--neon-text-color),
            0 0 10rem var(--neon-text-color);
        box-shadow:
            0 0 .5rem rgb(129, 205, 255),
            inset 0 0 .5rem rgb(129, 205, 255),
            0 0 2rem var(--neon-border-color),
            inset 0 0 2rem var(--neon-border-color),
            0 0 4rem var(--neon-border-color),
            inset 0 0 4rem var(--neon-border-color);
    }
    20%, 24%, 55% {
        text-shadow: none;
        box-shadow: none;
    }
}
@font-face{
  font-family:'Neon80sRegular';
src: url('//thenewcode.com/assets/fonts/neon-webfont.woff') format('woff'), 
  url('/assets/fonts/neon-webfont.ttf') format('truetype');
  font-weight:normal;
  font-style:normal;
}
/* ==== Top Sign End===== */

@keyframes App-logo-spin {
  from { transform: rotate(0deg); }
  to { transform: rotate(360deg); }
}

@font-face {
  font-family: BebasNeue;
  src: url("https://d1fsi47in3678q.cloudfront.net/fonts/BebasNeue-Regular.otf");
  font-style: normal;
  font-weight: 400;
}

@font-face {
  font-family: "NYC Sans Bold";
  src: url("https://www.nycgo.com/assets/fonts/nyc_sans/NYCSans-BoldWeb.woff") format("woff");
  font-style: normal;
  font-weight: 700;
}

@font-face {
  font-family: proxima-nova;
  src: url("https://use.typekit.net/af/71f83c/00000000000000003b9b093b/27/l?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n7&v=3") format("woff2") format("opentype");
  font-style: thin;
  font-weight: 200;
}

/* App Content */

.shelf {
  z-index: -1;
}

.content {
  margin-top: 18vh;
  padding-top: 10vh;
  background: #222;
  color: #ffffff;
}

.active{
  color: #08f;
  font-size: 2em;
  font-family: 'BebasNeue', Fallback, sans-serif;
  margin: 2em 2em 2em 2em;
}

.inactive{
  color: #fff;
  font-size: 2em;
  font-family: 'BebasNeue', Fallback, sans-serif;
  margin: 2em 2em 2em 2em;
}

.inactive:hover {
  color: #46a7fc;
  transition: 1s ease;

}

.shoe {
  width: 100%;
  height: auto;
  display: block;
}

table, th, td {
  /* border: 1px solid black; */
  border-collapse: collapse;
  table-layout: fixed;
  word-wrap:break-word;
}
th, td {
    padding: 5px;
    text-align: center;
    white-space: pre;
    word-wrap: break-word;
}

table#table1 {
  width:60%; 
  margin-left: auto; 
  margin-right: auto;
}

.container {
  position: relative;
  width: 50%;
}

.overlay {
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  height: 100%;
  width: 100%;
  opacity: 0;
  transition: .5s ease;
  background-color: #08f;
}

.container:hover .overlay {
  opacity: .9;
}

.shoe-info {
  font-family: 'proxima-nova', Fallback, sans-serif;
  color: white;
  font-size: 1.5vw;
  position: absolute;
  top: 50%;
  left: 50%;
  -webkit-transform: translate(-50%, -50%);
  -ms-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
  text-align: center;
}

.shoe-button {
  padding:15px 16px 15px 16px;
  margin:0;
  text-align: center;
  border-radius:5px;
  border: none;
  font-size: 4vh;
  font-family: BebasNeue;
  letter-spacing:2px;
  height:30px;
  width: 75px;
  color: #ffffff;
  background-color:#08f;
  padding:10px 15px
 }

 .shoe-button.remove{
  background-color:#ff5a5f;
 }


/* ==== The Modal: =====
Background */

.modal-edit {
  position: relative;
  background-color: #fefefe;
  padding: 0;
  border: 1px solid #888;
  width: 95%;
  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
  -webkit-animation-name: animatetop;
  -webkit-animation-duration: 0.4s;
  animation-name: animatetop;
  animation-duration: 0.4s
}

input[type=text] {
  border-radius: 10px;  
  width: 60%;
  color: #08f;
  box-sizing: border-box;
  border: 2px solid #ccc;
  font-size: 2.5vh;
  text-align: left;
  background-position: 10px 10px; 
  background-repeat: no-repeat;
  padding: 20px 20px 20px 20px;
  -webkit-transition: width 0.6s ease-in-out;
  transition: width 0.6s ease-in-out;
  }
  input[type=text]:focus {
    width: 95%;
    color: #000000;
  }

/* Add Animation */
@-webkit-keyframes animatetop {
  from {top:-300px; opacity:0} 
  to {top:0; opacity:1}
}

@keyframes animatetop {
  from {top:-300px; opacity:0}
  to {top:0; opacity:1}
}

/* The Close Button */
.close {
  color: black;
  float: right;
  font-size: 28px;
  font-weight: bold;
}

.close:hover,
.close:focus {
  color: #000;
  text-decoration: none;
  cursor: pointer;
}

.modal-header {
  padding: 2px 16px;
  background-color: #08f;
  color: white;
}

.modal-body {padding: 2px 16px;}

.modal-footer {
  padding: 2px 16px;
  background-color: #08f;
  color: white;
}

.modal-content {
  font-family: 'proxima-nova', Fallback, sans-serif;
  font-size: 3.25vh;
}

ul li {
  display:inline;
}

